# rust-server

./: .gitignore  Cargo.toml  README.md  a.out  database.env  docker-compose.yaml  locustfile.py  server  tree
C-Source/: client  server
documentation/: README.md  code_documentation.md  setup.md
documentation/api/: README.md  create.md  delete.md  get.md  update.md
migrations/: V1__initial.sql
migrations/2020-11-11-091049_create_notes/: down.sql  up.sql
migrations/2020-11-22-225833_todos/: up.sql
postgres/data/: postmaster.opts  postmaster.pid
resources/: error.html  index.html
resources/css/: style.css
resources/html/: 404.html  console.html  home.html
resources/js/: app.js
resources/logs/: Log.txt  test_log.txt
src/: browser_testing.py  content_type.rs  lib.rs  logger.rs  main.rs  mime_response.rs  schema.rs  server.rs  thread_pool.rs  utils.rs
src/controller/: admin_controller.rs  assets_controller.rs  base_controller.rs  controller.rs  home_controller.rs  mod.rs  notes_controller.rs  resources_controller.rs  todo_controller.rs  user_controller.rs
src/database/: db_handler.rs  mod.rs  models.rs
src/dtos/: mod.rs  note_dto.rs  todo_dto.rs  user_dto.rs
src/enums/: content_type.rs  http_methods.rs  http_status_codes.rs  mod.rs
src/http/: mime_response.rs  mod.rs  request.rs  response.rs
src/mapper/: note_mapper.rs
src/net/: mod.rs  request.rs  server.rs
src/pathhandler/: pathhandler.rs
src/server/: mime_response.rs  mod.rs  request.rs  response.rs  server.rs
tests/: integration_test.rs  test_todo_endpoints.rs  todo_endpoints.rs
(+64 files in other folders)
