[package]
name = "rust_server"
version = "0.1.0"
authors = ["Robin <robin.stoehr@code.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
libc = "0.2.77"
fancy-regex = "0.3.5"
regex = "1"
base64 = "0.4.1"
chrono = "0.4"
tinytemplate = "1.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"
image = "0.23.10"
